# kaggle

./: .gitignore  LICENSE  README.md  check.sh  pyproject.toml  submit.sh
digit-recognizer/: digit-recognizer.ipynb  kernel-metadata.json  main.py  mylib.py
store-sales-time-series-forecasting/: kernel-metadata.json
