[tool.poetry]
name = "mykaggle"
version = "0.1.0"
description = ""
authors = ["KEEWOONG NAM <keewoong.nam@flicspy.com>"]

[tool.poetry.dependencies]
python = "~3.9"
kaggle = "^1.5.13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
