[tool.poetry]
name = "mykaggle"
version = "0.1.0"
description = ""
authors = ["KEEWOONG NAM <keewoong.nam@flicspy.com>"]

[tool.poetry.dependencies]
python = "~3.9"
kaggle = "^1.5.13"
ipykernel = "^6.23.1"
numpy = "^1.24.3"
pandas = "^2.0.2"
scikit-learn = "^1.2.2"
tensorflow = "^2.12.0"


[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.3.0"}
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
